more writing, fix text wrap

--- a/css.css
+++ b/css.css
@@ -1,28 +1,30 @@
 body {
-    background-image: url("images/city.jpg");
-    background-size: cover;
-    background-position: center center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-color: #ffffff;
-    color: rgb(255, 0, 0);
-    font-family: 'Courier New', Courier, monospace, arial;
-    text-align: center;
-  }
-  
-  a:link {
-    color: rgb(255, 0, 0);
-    font-weight: bold;
-  }
-  
-  a:visited {
-    color: rgb(255, 0, 0);
-  }
-  
-  a:hover {
-    color: rgb(255, 0, 0);
-  }
-  
-  a:active {
-    color: rgb(255, 0, 0);
-  }
+  background-image: url("images/city.jpg");
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-color: #ffffff;
+  color: rgb(255, 0, 0);
+  font-family: 'Courier New', Courier, monospace, arial;
+  text-align: center;
+  margin: auto;
+  width: 50%;
+}
+
+a:link {
+  color: rgb(255, 0, 0);
+  font-weight: bold;
+}
+
+a:visited {
+  color: rgb(255, 0, 0);
+}
+
+a:hover {
+  color: rgb(255, 0, 0);
+}
+
+a:active {
+  color: rgb(255, 0, 0);
+}
